testsuite/escript/classes/fail-scopes-for-shadowing.err
fail-scopes-for-shadowing.src:5:13: error: FOR iterator 'variable' hides a local variable.