testsuite/escript/classes/fail-scopes-for-shadowing.src
// Various shadowing of the name 'variable' gives error

class Animal()
  function StaticFunc( variable )
    for variable := 1 to 5
    endfor
  endfunction
endclass

Animal::StaticFunc( 0 );
